--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  background: #475865;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: Oswald, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
@@ -13,4 +25,12 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 4rem;
+  text-align: center;
+  margin: 2rem 0;
+  color: #fff;
 }
